--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <div id="startup">
+        <input type="button" value="start" id="start-game">
+    </div>
     <div id="game">
         <div id="interface">
             <div id="main">
@@ -18,7 +21,9 @@
         </div>
     </div>
     <script src="size.js"></script>
-    <script src="progress.js"></script>
+    <script src="global-conductor.js"></script>
+    <script src="startup.js"></script>
+    <script src="game.js"></script>
 </body>
 
 </html>
