add return btn to game screen

--- a/index.html
+++ b/index.html
@@ -14,16 +14,21 @@
     </div>
     <div id="game">
         <div id="interface">
+            <div></div>
             <div id="main">
                 <div id="name"></div>
                 <div id="text"></div>
+            </div>
+            <div id="operationBtns">
+                <input id="return-start-up" type="button" value="start up">
             </div>
         </div>
     </div>
     <script src="size.js"></script>
     <script src="global-conductor.js"></script>
     <script src="startup.js"></script>
-    <script src="game.js"></script>
+    <script src="game/progress.js"></script>
+    <script src="game/return-btn.js"></script>
 </body>
 
 </html>
