record previous playing position

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div id="startup">
         <input type="button" value="start" id="start-game">
+        <input type="button" value="continue" id="continue-game">
     </div>
     <div id="game">
         <div id="interface">
@@ -26,6 +27,7 @@
     </div>
     <script src="size.js"></script>
     <script src="global-conductor.js"></script>
+    <script src="global-game-history.js"></script>
     <script src="startup.js"></script>
     <script src="game/progress.js"></script>
     <script src="game/return-btn.js"></script>
