--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             </div>
             <div id="operationBtns">
                 <input id="return-start-up" type="button" value="start up">
+                <input id="save-btn" type="button" value="save">
             </div>
         </div>
     </div>
